# DarkeLIB

./: .gitignore  Dockerfile  README.md  Vagrantfile  docker-compose.yml  local_options.fluffos  local_options.fluffos2  local_options.h  local_options.v22.2b14  mud.sh  provision.sh
mudlib/: config.darke  driver.exe.stackdump  list.txt  temporal_shield.c
mudlib/www/wwwcount2.3/: Config.tmpl  Count-config  Count-install  Gen-conf  Makefile  Makefile.in  README  cdebug.h  config.cache  config.h  config.status  configNT.h  configure  configure.in  count.cfg  count.h  main.c  makefile.wnt  parse.c  strimage.c  testcount-sh
mudlib/www/wwwcount2.3/combine/: Makefile  Makefile.in  allocim.c  alphaim.c  combine.h  compcmap.c  compimg.c  crbasei.c  cropim.c  defines.h  dstraimg.c  duplicim.c  errcds.h  flatten.c  frameim.c  gdfonts.h  getfinfo.c  getsize.c  imgstr.c  lsbfwrs.c  lzwdec.c  lzwenc.c  makefile.wnt  modulate.c  negate.c  opaqim.c  quantize.c  rddata.c  readblk.c  readgif.c  readim.c  rgbtran.c  rotate.c  setpixel.c  signature.c  syncimg.c  tranrgb.c  uncmpimg.c  writegif.c
mudlib/www/wwwcount2.3/conf/: count.cfg
mudlib/www/wwwcount2.3/docs/: Count.html
mudlib/www/wwwcount2.3/docs/cimages/: index.html
mudlib/www/wwwcount2.3/docs/images/: countdst.fig
mudlib/www/wwwcount2.3/utils/: Makefile  Makefile.in  README  makefile.wnt  mkstrip  mkstrip.1  mkstrip.c  mkstrip.sh  mkstrip.txt
mudlib/www/wwwcount2.3/wcount/conf/: count.cfg
v22.2b14/: GNUmakefile  a.out  applies.h  applies_table.c  cc.h  comptest.c  comptest.tab.c  comptest.y  configuration  driver  (+18 more)
(+5660 files in other folders)
