dnl Process this file with autoconf to produce a configure script.
AC_INIT(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
dnl AC_MSG_CHECKING(checking if datafile creation is allowed)
dnl if test -f "./.alfcf"; then
dnl    AC_DEFINE(ALLOW_FILE_CREATION)
dnl    AC_MSG_RESULT(yes)
dnl else
dnl    AC_MSG_RESULT(no)
dnl fi
dnl AC_MSG_CHECKING(checking if strict mode is decided)
dnl if test -f "./.strict"; then
dnl     AC_DEFINE(STRICT_MODE)
dnl     AC_MSG_RESULT(yes)
dnl else
dnl     AC_MSG_RESULT(no)
dnl fi
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
dnl AC_HEADER_STDC
AC_STDC_HEADERS
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
AC_CHECK_HEADERS(string.h fcntl.h memory.h malloc.h unistd.h ctype.h)
AC_CHECK_HEADERS(strings.h)

AC_CHECK_HEADERS(sys/stat.h sys/param.h sys/file.h stdlib.h)
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM
AC_CHECK_FUNC(flock,AC_DEFINE(HAVE_FLOCK))
AC_CHECK_FUNC(strcasecmp,AC_DEFINE(HAVE_STRCASECMP))
AC_CHECK_FUNC(mktime,AC_DEFINE(HAVE_MKTIME))
dnl from vile configure.in, I love vile, a great editor
AC_MSG_CHECKING([for SCO])
AC_PROGRAM_CHECK(COULD_BE_SCO, [scosh], maybe, maybenot)
if test "$COULD_BE_SCO" = "maybe"
then
    AC_DEFINE(SYSTEM_LOOKS_LIKE_SCO)
fi

dnl Checks for library functions.

AC_OUTPUT(combine/Makefile Makefile utils/Makefile)
